--- a/fw2/fw2.ioc
+++ b/fw2/fw2.ioc
@@ -16,7 +16,7 @@ Mcu.Name=STM32F042K(4-6)Tx
 Mcu.Package=LQFP32
 Mcu.Pin0=PF0-OSC_IN
 Mcu.Pin1=PA5
-Mcu.Pin10=VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS
+Mcu.Pin10=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin2=PA7
 Mcu.Pin3=PA11
 Mcu.Pin4=PA12
@@ -71,7 +71,7 @@ ProjectManager.DeviceId=STM32F042K6Tx
 ProjectManager.FirmwarePackage=STM32Cube FW_F0 V1.11.5
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
-ProjectManager.HeapSize=0x000
+ProjectManager.HeapSize=0x400
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=0
@@ -82,11 +82,11 @@ ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=fw2.ioc
 ProjectManager.ProjectName=fw2
 ProjectManager.RegisterCallBack=
-ProjectManager.StackSize=0x400
+ProjectManager.StackSize=0x150
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,5-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.AHBFreq_Value=48000000
 RCC.APB1Freq_Value=48000000
 RCC.APB1TimFreq_Value=48000000
@@ -94,18 +94,21 @@ RCC.CECFreq_Value=32786.88524590164
 RCC.FCLKCortexFreq_Value=48000000
 RCC.FamilyName=M
 RCC.HCLKFreq_Value=48000000
-RCC.HSE_VALUE=8192000
 RCC.HSICECFreq_Value=32786.88524590164
 RCC.I2SFreq_Value=48000000
-RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,CECFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSICECFreq_Value,I2SFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USART1Freq_Value,VCOOutput2Freq_Value
+RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,CECFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSICECFreq_Value,I2SFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLDivider,PLLMCOFreq_Value,PLLSourceVirtual,PLLSourceVirtualString,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USART1Freq_Value,USBFreq_Value,VCOOutput2Freq_Value
 RCC.MCOFreq_Value=48000000
-RCC.PLLCLKFreq_Value=16000000
-RCC.PLLMCOFreq_Value=16000000
+RCC.PLLCLKFreq_Value=48000000
+RCC.PLLDivider=RCC_PREDIV_DIV2
+RCC.PLLMCOFreq_Value=48000000
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSI48
+RCC.PLLSourceVirtualString=RCC_PLLSOURCE_HSI48
 RCC.SYSCLKFreq_VALUE=48000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_HSI48
 RCC.TimSysFreq_Value=48000000
 RCC.USART1Freq_Value=48000000
-RCC.VCOOutput2Freq_Value=8000000
+RCC.USBFreq_Value=48000000
+RCC.VCOOutput2Freq_Value=24000000
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
 SPI1.CalculateBaudRate=3.0 MBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
@@ -117,18 +120,19 @@ TIM2.IPParameters=Period,Prescaler
 TIM2.Period=1500
 TIM2.Prescaler=999
 USB.IPParameters=lpm_enable
-USB.lpm_enable=ENABLE
-USB_DEVICE.CLASS_NAME_FS=CUSTOM_HID
-USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS,USBD_SELF_POWERED,USBD_CUSTOMHID_OUTREPORT_BUF_SIZE,USBD_CUSTOM_HID_REPORT_DESC_SIZE
-USB_DEVICE.USBD_CUSTOMHID_OUTREPORT_BUF_SIZE=64
-USB_DEVICE.USBD_CUSTOM_HID_REPORT_DESC_SIZE=200
+USB.lpm_enable=DISABLE
+USB_DEVICE.APP_RX_DATA_SIZE=550
+USB_DEVICE.APP_TX_DATA_SIZE=25
+USB_DEVICE.CLASS_NAME_FS=CDC
+USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS,USBD_SELF_POWERED,APP_TX_DATA_SIZE,APP_RX_DATA_SIZE,USBD_MAX_STR_DESC_SIZ
+USB_DEVICE.USBD_MAX_STR_DESC_SIZ=10
 USB_DEVICE.USBD_SELF_POWERED=0
-USB_DEVICE.VirtualMode=CustomHid
-USB_DEVICE.VirtualModeFS=Custom_Hid_FS
+USB_DEVICE.VirtualMode=Cdc
+USB_DEVICE.VirtualModeFS=Cdc_FS
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
-VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS.Mode=CUSTOM_HID_FS
-VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS
+VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
+VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 board=custom
