--- a/fw2/fw2.ioc
+++ b/fw2/fw2.ioc
@@ -118,15 +118,16 @@ TIM2.Period=1500
 TIM2.Prescaler=999
 USB.IPParameters=lpm_enable,low_power_enable
 USB.low_power_enable=DISABLE
-USB.lpm_enable=DISABLE
+USB.lpm_enable=ENABLE
 USB_DEVICE.APP_RX_DATA_SIZE=550
 USB_DEVICE.APP_TX_DATA_SIZE=100
 USB_DEVICE.CLASS_NAME_FS=CDC
-USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS,USBD_SELF_POWERED,APP_TX_DATA_SIZE,APP_RX_DATA_SIZE,USBD_MAX_STR_DESC_SIZ,USBD_DEBUG_LEVEL,MANUFACTURER_STRING,PRODUCT_STRING_CDC_FS,PID_CDC_FS
+USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS,USBD_SELF_POWERED,APP_TX_DATA_SIZE,APP_RX_DATA_SIZE,USBD_MAX_STR_DESC_SIZ,USBD_DEBUG_LEVEL,MANUFACTURER_STRING,PRODUCT_STRING_CDC_FS,PID_CDC_FS,USBD_MAX_NUM_INTERFACES
 USB_DEVICE.MANUFACTURER_STRING=Steinmetz
 USB_DEVICE.PID_CDC_FS=65262
 USB_DEVICE.PRODUCT_STRING_CDC_FS=Steinmetz
 USB_DEVICE.USBD_DEBUG_LEVEL=3
+USB_DEVICE.USBD_MAX_NUM_INTERFACES=2
 USB_DEVICE.USBD_MAX_STR_DESC_SIZ=100
 USB_DEVICE.USBD_SELF_POWERED=0
 USB_DEVICE.VirtualMode=Cdc
